# photic

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docker/: Dockerfile  README.md  docker-compose.yaml
docs/: conf.py  index.rst
notebooks/: NP.ipynb  PLASSTIC data.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20240430_224227-8jtr9jjg/: run-8jtr9jjg.wandb
notebooks/wandb/run-20240430_224227-8jtr9jjg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20240430_224455-coywdmmf/: run-coywdmmf.wandb
notebooks/wandb/run-20240430_224455-coywdmmf/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20240430_224537-yuuo4dxe/: run-yuuo4dxe.wandb
notebooks/wandb/run-20240430_224537-yuuo4dxe/files/: config.yaml  wandb-metadata.json  wandb-summary.json
scripts/: mallorn_diagnostics.py
src/nps_tdes/: __init__.py  datasets.py  skeleton.py
src/photic/: __init__.py  alerts.py  baseline.py  batch.py  cli.py  config.py  data.py  elasticc.py  gui.py  losses.py  model.py  models.py  modules.py  plot.py  predict.py  run.py  train.py  utils.py
tests/: conftest.py  test_skeleton.py
wandb/: latest-run
wandb/run-20240501_222700-34qud76h/: run-34qud76h.wandb
wandb/run-20240501_222700-34qud76h/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20240502_084020-ahr1qiqw/: run-ahr1qiqw.wandb
wandb/run-20240502_084020-ahr1qiqw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+6 files in other folders)
