[project]
name = "photic"
version = "0.2.0"
description = "ConvGNP-like joint reconstruction and classification models for irregular multi-band light curves."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Nicholas Earl", email = "contact@nicholasearl.me" }
]
requires-python = ">=3.13"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "click>=8.1",
  "pandas>=3.0.2",
  "scikit-learn>=1.8.0",
  "matplotlib>=3.10.8",
]

[project.optional-dependencies]
train = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.scripts]
photic = "photic.cli:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
